tests/e2e/semantics/mutation/invalid_arg2.story
a = 1
b = a.increment(item:1)
